# ros2_components_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml  ros2_componentsConfig.cmake
src/demo/: DemoRobot.cpp  DemoRobot.h  DummySensor.cpp  DummySensor.h
src/exec/: client.cpp  client.cpp.orig  parameter_server.cpp  server.cpp
src/ros2_components/: Entity.h  Robot.h
